Correction alignement home et image menu

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -101,6 +101,7 @@ li {
 .restaurant__container{
     background-color: $grey;
     padding-left: 0px;
+    padding-right: 0px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -111,12 +112,13 @@ li {
 .restaurant{
     @include titre__section;
 }
+
 .restaurant__card{
     border: 1px;
     border-radius: 15px 15px 15px 15px;
     font-size: 13px;
-    width: 300px;
-    height: 240px;  
+    width: 85%;
+    height: 300px;  
     margin-left: 10px;
     margin-right: 10px; 
     margin-bottom: 30px; 
@@ -154,7 +156,11 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-
+.align{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 footer{
     background-color: black;
     color: white;
