--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -14,7 +14,7 @@ body{
 }
 .restaurant__mainpage__image{
     width: 100%;
-    height: 100%;
+    height: 340px;
     margin: 0px;
     object-fit: cover;
 }
