--- a/sass/style.css
+++ b/sass/style.css
@@ -629,6 +629,7 @@ header h1 {
   .restaurant__container {
     background-color: #eaeaea;
     padding-left: 0px;
+    padding-right: 0px;
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -637,15 +638,15 @@ header h1 {
     top: -92px;
   }
   .restaurant {
-    padding-left: 15px;
+    padding-left: 35px;
     font-weight: 800;
   }
   .restaurant__card {
     border: 1px;
     border-radius: 15px 15px 15px 15px;
     font-size: 13px;
-    width: 300px;
-    height: 240px;
+    width: 85%;
+    height: 300px;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 30px;
@@ -692,6 +693,18 @@ header h1 {
         -ms-flex-align: center;
             align-items: center;
   }
+  .align {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   footer {
     background-color: black;
     color: white;
@@ -715,7 +728,7 @@ body {
 
 .restaurant__mainpage__image {
   width: 100%;
-  height: 100%;
+  height: 340px;
   margin: 0px;
   -o-object-fit: cover;
      object-fit: cover;
