--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -1,5 +1,5 @@
 @mixin titre__section {
-    padding-left: 15px;
+    padding-left: 35px;
     font-weight: 800;
 }
 @mixin operation__step {
